--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
-pylint==2.12.2
-pytest==6.2.5
-black==21.12b0
+pylint
+pytest
+pandas
+Flask==1.1.1
+gunicorn==20.0.4
+jsonify
+google-api-core==1.26.0
+google-api-python-client==1.12.8
+google-auth==1.27.0
+google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.2
+google-cloud-bigquery==2.10.0
+google-cloud-bigquery-storage==2.3.0
+google-cloud-core==1.6.0
+google-cloud-storage==1.36.1
+google-crc32c==1.1.2
+google-resumable-media==1.2.0
+googleapis-common-protos==1.52.0
